--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,46 @@
     "lua.debug.settings.console": "integratedTerminal",
     "lua.debug.settings.luaVersion": "5.1",
     "Lua.diagnostics.globals": [
-        "HEIRLOOMS_CLASS_FILTER_FORMAT"
+        "HEIRLOOMS_CLASS_FILTER_FORMAT",
+        "CreateFrame",
+        "UnitClass",
+        "GetTime",
+        "UnitLevel",
+        "UnitIsUnit",
+        "CombatLogGetCurrentEventInfo",
+        "UnitGUID",
+        "GetSpecialization",
+        "GetSpecializationInfo",
+        "GetNetStats",
+        "GetCurrentKeyBoardFocus",
+        "C_PetBattles",
+        "format",
+        "strrep",
+        "geterrorhandler",
+        "ID",
+        "error",
+        "_G",
+        "setmetatable",
+        "UnitHealth",
+        "table",
+        "print",
+        "string",
+        "ipairs",
+        "type",
+        "tonumber",
+        "IsStealthed",
+        "IsFlyableArea",
+        "IsFlying",
+        "IsMounted",
+        "unpack",
+        "rawset",
+        "class",
+        "SlashCmdList",
+        "QuickJoinToastButton",
+        "GameTooltip_AddNormalLine",
+        "GameTooltip_Hide",
+        "AutoCastShine_AutoCastStart",
+        "AutoCastShine_AutoCastStop",
+        "GameTooltip_AddBlankLineToTooltip"
     ]
 }
