--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,7 +59,10 @@
         "UIParent",
         "GameTooltip",
         "GetSpecializationInfoByID",
-        "tostring"
+        "tostring",
+        "UnitBuff",
+        "UnitDebuff",
+        "ChatFrameChannelButton"
     ],
     "files.encoding": "utf8"
 }
