--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,7 +62,44 @@
         "tostring",
         "UnitBuff",
         "UnitDebuff",
-        "ChatFrameChannelButton"
+        "ChatFrameChannelButton",
+        "GetSpellInfo",
+        "UnitCastingInfo",
+        "UnitChannelInfo",
+        "GetSpellBookItemName",
+        "GetActionInfo",
+        "min",
+        "max",
+        "strsplit",
+        "UnitAffectingCombat",
+        "IsSpellInRange",
+        "GetSpellCooldown",
+        "GetSpecializationSpells",
+        "IsUsableSpell",
+        "IsHarmfulSpell",
+        "UnitIsFriend",
+        "C_ActionBar",
+        "IsSpellKnown",
+        "IsTalentSpell",
+        "GetSpellBookItemInfo",
+        "UnitHasVehicleUI",
+        "UnitExists",
+        "IsPlayerSpell",
+        "GetBuildInfo",
+        "UnitIsDeadOrGhost",
+        "UnitIsAFK",
+        "SpellHasRange",
+        "GetSpellLink",
+        "IsLeftAltKeyDown",
+        "UnitIsDead",
+        "UnitPower",
+        "UnitHealthMax",
+        "UnitCreatureType",
+        "UnitThreatSituation",
+        "GetComboPoints",
+        "UnitPowerMax",
+        "GetUnitSpeed",
+        "IsFalling"
     ],
     "files.encoding": "utf8"
 }
